# gct-bhsm-inventory-reservation

./: .gitignore
assets/: test-db_2024-08-24T09_59_52.412Z.sql
reservation-inventory/: package-lock.json  package.json
rust-quasar/client-frontend/: README.md  package-lock.json  package.json  quasar.config.js
rust-quasar/client-frontend/src/layouts/Guest/: GuestLayout.vue
rust-quasar/client-frontend/src/pages/Login/: LoginPage.vue
rust-quasar/client-frontend/src/pages/Register/: RegisterPage.vue
rust-quasar/client-frontend/src/router/: routes.ts
rust-quasar/server-backend/: .env  Cargo.toml
rust-quasar/server-backend/.cargo/: config.toml
rust-quasar/server-backend/crates/libs/lib-auth/: Cargo.toml
rust-quasar/server-backend/crates/libs/lib-auth/src/: config.rs  lib.rs
rust-quasar/server-backend/crates/libs/lib-auth/src/pass/: error.rs  mod.rs
rust-quasar/server-backend/crates/libs/lib-auth/src/pass/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
rust-quasar/server-backend/crates/libs/lib-auth/src/token/: error.rs  mod.rs
rust-quasar/server-backend/crates/libs/lib-core/: Cargo.toml
rust-quasar/server-backend/crates/libs/lib-utils/: Cargo.toml
rust-quasar/server-backend/crates/libs/lib-utils/src/: b32.rs  b58.rs  b64.rs  envs.rs  time.rs
rust-quasar/server-backend/crates/libs/lib-web/: Cargo.toml
rust-quasar/server-backend/crates/tools/gen-key/: Cargo.toml
