[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [
    # --- Application Libraries
    "crates/libs/lib-auth",
    "crates/libs/lib-core",
    "crates/libs/lib-utils",
    "crates/libs/lib-web",

    # --- Application Services
    "crates/services/web-server",

    # --- Application Tools
    "crates/tools/gen-key"
]

[workspace.dependencies]
serde_with = { version = "3", features = ["time_0_3"]}
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
derive_more = { version = "1", features = ["from", "display"] }
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }
